--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,8 @@
 {
     "rules": {
-        "at-rule-empty-line-before": "always",
+        "at-rule-empty-line-before": [ "always", {
+          "except": ["blockless-after-blockless"],
+        } ],
         "at-rule-no-unknown": true,
         "block-closing-brace-newline-after": "always-multi-line",
         "block-no-empty": true,
