--- a/.stylelintrc
+++ b/.stylelintrc
@@ -12,7 +12,7 @@
         "color-no-invalid-hex": true,
         "declaration-block-no-duplicate-properties": true,
         "declaration-block-no-redundant-longhand-properties": true,
-        "declaration-block-semicolon-newline-after": "always",
+        "declaration-block-semicolon-newline-after": "always-multi-line",
         "declaration-block-trailing-semicolon": "always",
         "declaration-colon-space-after": "always",
         "font-family-name-quotes": "always-where-recommended",
